--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -3,7 +3,7 @@
 
 menu:
 - {name: 'Projects', url: ''}
-# - {name: 'Writing', url: 'writing'}
+- {name: 'Writing',  url: 'writing'}
 - {name: 'Blog',     url: 'blog'}
 - {name: 'About',    url: 'about'}
 - {name: 'Contact',  url: 'contact'}
